--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/dayjs": "^3.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.1",
+    "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^7.1.1",
     "@mui/styled-engine-sc": "^7.1.1",
-    "@mui/x-date-pickers": "^8.5.2",
+    "@mui/x-date-pickers": "^8.5.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
