--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
+    "peerjs": "^1.5.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
