--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
+    "material-react-toastify": "^10.0.5",
     "peerjs": "^1.5.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
