--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/styled-engine-sc": "^7.1.1",
     "@mui/x-data-grid": "^8.6.0",
     "@mui/x-date-pickers": "^8.5.3",
+    "@mui/x-date-pickers-pro": "^8.6.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
